Deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-html
  labels:
    app: nginx-html
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-html
  template:
    metadata:
      Labels:
        app: nginx-html
    spec:
      containers:
      - name: nginx-html
        image: <your repo name where you pushed the image>
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: artifactory-secret
