Deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-html
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv6
  - IPv4
  ipFamilyPolicy: SingleStack
  selector:
    app: nginx-html
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  sessionAffinity: None
  type: ClusterIP
