Deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: nginx-html
spec:
  rules:
  - host: test.abc.com
    http:
      paths:
      - backend:
          service:
            name: nginx-html
            port:
              number: 80
        path: /api/support
        pathType: Prefix
